sytle: fixed white space at bottom of footer on screens < 305px

--- a/css/style.css
+++ b/css/style.css
@@ -580,9 +580,15 @@ hr {
   }
 }
 
-@media only screen and (max-width: 277px) {
+@media only screen and (max-width: 305px) {
   .footer {
-    height: 10rem;
+    padding-bottom: 10rem;
+  }
+}
+
+@media only screen and (max-width: 280px) {
+  .footer {
+    padding-bottom: 11rem;
   }
 }
 
